# evalon

./: .firebaserc  .gitignore  README.md  check_env.py  check_iam.py  check_image.py  check_logs.py  deploy_frontend.py  firebase.json  firestore.indexes.json  firestore.rules  package-lock.json  storage.rules  test_vertex.py
backend/backtest/: .dockerignore  .gcloudignore  .gitignore  API_KULLANIM_DOKUMANI.tex  Ara_Rapor_Teknik_Altyapi.css  Ara_Rapor_Teknik_Altyapi.html  Borsa-1_Ara_Rapor.html  DEPLOY_CLOUD_RUN.md  Dockerfile  README.md  backtest.code-workspace  generate_report.py  pyproject.toml  requirements.txt
backend/backtest/api/: __init__.py  calendar_router.py  main.py  screener.py  screener_filters.py  talib_indicators.py
backend/backtest/api/data/co_movement/: latest.json
backend/backtest/api/infrastructure/: cache_helpers.py  redis_client.py
backend/backtest/api/modules/ai/: __init__.py
backend/backtest/data_clients/: bist_prices_1h_client.py  bist_prices_client.py  hybrid_bist_prices_client.py
backend/backtest/engine/: backtest_engine.py  backtest_plot.py
backend/backtest/examples/: main_rsi_backtest.py  rsi_strategy.py
backend/backtest/scripts/: build_co_movement_universe_snapshot.py  deploy_cloud_run.sh  smoke_test_cloud_run.sh
backend/backtest/stratejiler/: __init__.py  base_strategy.py  blueprint_rules.py  kombinator.py  macd_strategy.py  multi_timeframe_backtest.py  portfolio_backtest.py  rsi_strategy.py  strategy_catalog.py
backend/backtest/tests/: test_co_movement.py  test_screener.py
backend/backtest/utils/: check_data_range.py
(+871 files in other folders)
